<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kamus Dita</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="indo">Indonesia - Sumbawa</string>
    <string name="sbw">Sumbawa - Indonesia</string>
    <string name="translate">Translate</string>
    <string name="judul">Silahkan Cari Kata</string>
    <string name="hasil">Hasil :</string>
    <string name="texthasil">-- result --</string>
    <string name="_data_data_">/data/data/</string>

</resources>
