<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffaa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/judul"
        android:textColor="#FF3366"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textCari"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="text"
        android:textColor="#844eff" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="#ffaa88"
		android:textColor="#ffffff"
        android:text="@string/translate"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textHasil"
        android:layout_below="@+id/button1"
        android:layout_marginTop="28dp"
        android:text="@string/hasil"
        android:textColor="#884400" />

    <TextView
        android:id="@+id/textHasil"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textCari"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="26dp"
        android:background="#ffffff"
        android:text="@string/texthasil"
        android:textColor="#FF3366"
        android:textSize="50sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="16dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/indo" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sbw" />
    </RadioGroup>

</RelativeLayout>